Use pattern matching